# focus-flow

./: .gitignore  README.md  README_CN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: Cargo.toml
backend/src/: main.rs
electron/: main.ts  preload.ts
src/: App.vue  main.ts  style.css
