[package]
name = "focus-flow-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.11.25", default-features = false, features = ["json", "rustls-tls"] }
chrono = "0.4.35"

[profile.release]
codegen-units = 1
opt-level = 3